--- a/environments.yml
+++ b/environments.yml
@@ -1,16 +1,23 @@
 name: lg-crop
 channels:
   - pytorch
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=4.5=1_gnu
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
   - blas=1.0=mkl
   - bottleneck=1.3.2=py38heb32a55_1
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2021.10.26=h06a4308_2
-  - certifi=2021.10.8=py38h06a4308_0
+  - ca-certificates=2021.10.8=ha878542_0
+  - certifi=2021.10.8=py38h578d9bd_1
   - cudatoolkit=10.2.89=hfd86e86_1
+  - debugpy=1.5.1=py38h295c915_0
+  - decorator=5.1.0=pyhd8ed1ab_0
+  - entrypoints=0.3=pyhd8ed1ab_1003
   - ffmpeg=4.2.2=h20bf706_0
   - flake8=3.9.2=pyhd3eb1b0_0
   - freetype=2.11.0=h70c0345_0
@@ -19,7 +26,12 @@ dependencies:
   - gnutls=3.6.15=he1e5248_0
   - importlib-metadata=4.8.2=py38h06a4308_0
   - intel-openmp=2021.4.0=h06a4308_3561
+  - ipykernel=6.6.1=py38he5a9106_0
+  - ipython=7.31.0=py38h578d9bd_0
+  - jedi=0.18.1=py38h578d9bd_0
   - jpeg=9d=h7f8727e_0
+  - jupyter_client=7.1.0=pyhd8ed1ab_0
+  - jupyter_core=4.9.1=py38h578d9bd_1
   - lame=3.100=h7b6447c_0
   - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.35.1=h7274673_9
@@ -29,6 +41,7 @@ dependencies:
   - libidn2=2.3.2=h7f8727e_0
   - libopus=1.3.1=h7b6447c_0
   - libpng=1.6.37=hbc83047_0
+  - libsodium=1.0.18=h36c2ea0_1
   - libstdcxx-ng=9.3.0=hd4cf53a_17
   - libtasn1=4.16.0=h27cfd23_0
   - libtiff=4.2.0=h85742a9_0
@@ -38,12 +51,14 @@ dependencies:
   - libwebp=1.2.0=h89dd481_0
   - libwebp-base=1.2.0=h27cfd23_0
   - lz4-c=1.9.3=h295c915_1
+  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
   - mccabe=0.6.1=py38_1
   - mkl=2021.4.0=h06a4308_640
   - mkl-service=2.4.0=py38h7f8727e_0
   - mkl_fft=1.3.1=py38hd3c417c_0
   - mkl_random=1.2.2=py38h51133e4_0
   - ncurses=6.3=h7f8727e_2
+  - nest-asyncio=1.5.4=pyhd8ed1ab_0
   - nettle=3.7.3=hbbd107a_1
   - numexpr=2.8.1=py38h6abb31d_0
   - numpy=1.21.2=py38h20f2e39_0
@@ -53,25 +68,37 @@ dependencies:
   - openssl=1.1.1l=h7f8727e_0
   - packaging=21.3=pyhd3eb1b0_0
   - pandas=1.3.4=py38h8c16a72_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
   - pillow=8.4.0=py38h5aabda8_0
   - pip=21.2.4=py38h06a4308_0
+  - prompt-toolkit=3.0.24=pyha770c72_0
+  - ptyprocess=0.7.0=pyhd3deb0d_0
   - pycodestyle=2.7.0=pyhd3eb1b0_0
   - pyflakes=2.3.1=pyhd3eb1b0_0
+  - pygments=2.11.1=pyhd8ed1ab_0
   - python=3.8.12=h12debd9_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python_abi=3.8=2_cp38
   - pytorch=1.10.1=py3.8_cuda10.2_cudnn7.6.5_0
   - pytorch-mutex=1.0=cuda
   - pytz=2021.3=pyhd3eb1b0_0
+  - pyzmq=19.0.2=py38ha71036d_2
   - readline=8.1=h27cfd23_0
   - setuptools=58.0.4=py38h06a4308_0
   - six=1.16.0=pyhd3eb1b0_0
   - sqlite=3.37.0=hc218d9a_0
   - tk=8.6.11=h1ccaba5_0
   - torchvision=0.11.2=py38_cu102
+  - tornado=6.1=py38h497a2fe_1
+  - traitlets=5.1.1=pyhd8ed1ab_0
   - typing_extensions=3.10.0.2=pyh06a4308_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
   - wheel=0.37.0=pyhd3eb1b0_1
   - x264=1!157.20191217=h7b6447c_0
   - xz=5.2.5=h7b6447c_0
+  - zeromq=4.3.4=h9c3ff4c_0
   - zipp=3.6.0=pyhd3eb1b0_0
   - zlib=1.2.11=h7f8727e_4
   - zstd=1.4.9=haebb681_0
