--- a/environments.yml
+++ b/environments.yml
@@ -111,28 +111,44 @@ dependencies:
     - attrs==21.4.0
     - cachetools==4.2.4
     - charset-normalizer==2.0.10
+    - click==8.0.3
+    - cloudpickle==2.0.0
+    - configparser==5.2.0
+    - cycler==0.11.0
+    - docker-pycreds==0.4.0
+    - fonttools==4.28.5
     - frozenlist==1.2.0
     - fsspec==2021.11.1
     - future==0.18.2
+    - gitdb==4.0.9
+    - gitpython==3.1.26
     - google-auth==2.3.3
     - google-auth-oauthlib==0.4.6
     - grpcio==1.43.0
+    - gym==0.21.0
     - idna==3.3
     - imageio==2.13.5
     - joblib==1.1.0
+    - kiwisolver==1.3.2
+    - lightning-bolts==0.5.0
     - markdown==3.3.6
+    - matplotlib==3.5.1
     - multidict==5.2.0
     - networkx==2.6.3
     - oauthlib==3.1.1
     - opencv-contrib-python==4.5.5.62
     - opencv-python==4.5.5.62
     - opencv-python-headless==4.5.5.62
+    - pathtools==0.1.2
+    - promise==2.3
     - protobuf==3.19.1
+    - psutil==5.9.0
     - pyasn1==0.4.8
     - pyasn1-modules==0.2.8
     - pydeprecate==0.3.1
     - pyparsing==3.0.6
     - pytorch-lightning==1.5.8
+    - pytorch-lightning-bolts==0.3.2.post1
     - pywavelets==1.2.0
     - pyyaml==6.0
     - qudida==0.0.4
@@ -142,14 +158,23 @@ dependencies:
     - scikit-image==0.19.1
     - scikit-learn==1.0.2
     - scipy==1.7.3
+    - sentry-sdk==1.5.2
+    - shortuuid==1.0.8
+    - smmap==5.0.0
+    - subprocess32==3.5.4
     - tensorboard==2.7.0
     - tensorboard-data-server==0.6.1
     - tensorboard-plugin-wit==1.8.1
+    - termcolor==1.1.0
     - threadpoolctl==3.0.0
     - tifffile==2021.11.2
+    - torch-tb-profiler==0.3.1
+    - torchinfo==1.6.2
     - torchmetrics==0.6.2
     - tqdm==4.62.3
     - urllib3==1.26.7
+    - wandb==0.12.9
     - werkzeug==2.0.2
     - yarl==1.7.2
+    - yaspin==2.1.0
 prefix: /opt/conda/envs/lg-crop
